classDiagram
  class PersonalInformation {
    email: String
    phone: String
    firstName: String
    lastName: String
    title: String
    signature.public_id: String
    signature.url: String
    dateOfBirth: Date
    gender: String
    nationality: String
    meansOfId: String
    idNumber: String
    pensionNumber: String
    nhisNumber: String
    healthInsuranceNumber: String
    taxNumber: String
    street: String
    apartment: String
    zip: String
    city: String
    country: String
    address: String
    maritalStatus: String
    employee: ObjectId
    deleted: Boolean
    organizationId: ObjectId [Required]
    createdAt: Date
    updatedAt: Date
  }

  PersonalInformation --> Employee
  PersonalInformation --> Organization
